--- a/load-data.ipynb
+++ b/load-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,268 @@
     "prices2012 = pd.read_csv('data-csv/ResaleFlatPricesBasedonApprovalDate2000Feb2012.csv')\n",
     "prices2014 = pd.read_csv('data-csv/ResaleFlatPricesBasedonRegistrationDateFromMar2012toDec2014.csv')\n",
     "prices2017 = pd.read_csv('data-csv/ResaleflatpricesbasedonregistrationdatefromJan2017onwards.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>month</th>\n",
+       "      <th>town</th>\n",
+       "      <th>flat_type</th>\n",
+       "      <th>block</th>\n",
+       "      <th>street_name</th>\n",
+       "      <th>storey_range</th>\n",
+       "      <th>floor_area_sqm</th>\n",
+       "      <th>flat_model</th>\n",
+       "      <th>lease_commence_date</th>\n",
+       "      <th>remaining_lease</th>\n",
+       "      <th>resale_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-01</td>\n",
+       "      <td>ANG MO KIO</td>\n",
+       "      <td>2 ROOM</td>\n",
+       "      <td>406</td>\n",
+       "      <td>ANG MO KIO AVE 10</td>\n",
+       "      <td>10 TO 12</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>Improved</td>\n",
+       "      <td>1979</td>\n",
+       "      <td>61 years 04 months</td>\n",
+       "      <td>232000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017-01</td>\n",
+       "      <td>ANG MO KIO</td>\n",
+       "      <td>3 ROOM</td>\n",
+       "      <td>108</td>\n",
+       "      <td>ANG MO KIO AVE 4</td>\n",
+       "      <td>01 TO 03</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>New Generation</td>\n",
+       "      <td>1978</td>\n",
+       "      <td>60 years 07 months</td>\n",
+       "      <td>250000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017-01</td>\n",
+       "      <td>ANG MO KIO</td>\n",
+       "      <td>3 ROOM</td>\n",
+       "      <td>602</td>\n",
+       "      <td>ANG MO KIO AVE 5</td>\n",
+       "      <td>01 TO 03</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>New Generation</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>62 years 05 months</td>\n",
+       "      <td>262000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2017-01</td>\n",
+       "      <td>ANG MO KIO</td>\n",
+       "      <td>3 ROOM</td>\n",
+       "      <td>465</td>\n",
+       "      <td>ANG MO KIO AVE 10</td>\n",
+       "      <td>04 TO 06</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>New Generation</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>62 years 01 month</td>\n",
+       "      <td>265000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017-01</td>\n",
+       "      <td>ANG MO KIO</td>\n",
+       "      <td>3 ROOM</td>\n",
+       "      <td>601</td>\n",
+       "      <td>ANG MO KIO AVE 5</td>\n",
+       "      <td>01 TO 03</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>New Generation</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>62 years 05 months</td>\n",
+       "      <td>265000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176368</th>\n",
+       "      <td>2024-04</td>\n",
+       "      <td>YISHUN</td>\n",
+       "      <td>5 ROOM</td>\n",
+       "      <td>432A</td>\n",
+       "      <td>YISHUN AVE 1</td>\n",
+       "      <td>07 TO 09</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>Improved</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>90 years 07 months</td>\n",
+       "      <td>660000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176369</th>\n",
+       "      <td>2024-04</td>\n",
+       "      <td>YISHUN</td>\n",
+       "      <td>5 ROOM</td>\n",
+       "      <td>298</td>\n",
+       "      <td>YISHUN ST 20</td>\n",
+       "      <td>01 TO 03</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>Improved</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>75 years 08 months</td>\n",
+       "      <td>585000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176370</th>\n",
+       "      <td>2024-04</td>\n",
+       "      <td>YISHUN</td>\n",
+       "      <td>5 ROOM</td>\n",
+       "      <td>335C</td>\n",
+       "      <td>YISHUN ST 31</td>\n",
+       "      <td>13 TO 15</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>Improved</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>90 years 08 months</td>\n",
+       "      <td>673800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176371</th>\n",
+       "      <td>2024-04</td>\n",
+       "      <td>YISHUN</td>\n",
+       "      <td>5 ROOM</td>\n",
+       "      <td>502D</td>\n",
+       "      <td>YISHUN ST 51</td>\n",
+       "      <td>07 TO 09</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>Improved</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>92 years 10 months</td>\n",
+       "      <td>725000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176372</th>\n",
+       "      <td>2024-04</td>\n",
+       "      <td>YISHUN</td>\n",
+       "      <td>EXECUTIVE</td>\n",
+       "      <td>652</td>\n",
+       "      <td>YISHUN AVE 4</td>\n",
+       "      <td>07 TO 09</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>Apartment</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>67 years 03 months</td>\n",
+       "      <td>1080000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>176373 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          month        town  flat_type block        street_name storey_range  \\\n",
+       "0       2017-01  ANG MO KIO     2 ROOM   406  ANG MO KIO AVE 10     10 TO 12   \n",
+       "1       2017-01  ANG MO KIO     3 ROOM   108   ANG MO KIO AVE 4     01 TO 03   \n",
+       "2       2017-01  ANG MO KIO     3 ROOM   602   ANG MO KIO AVE 5     01 TO 03   \n",
+       "3       2017-01  ANG MO KIO     3 ROOM   465  ANG MO KIO AVE 10     04 TO 06   \n",
+       "4       2017-01  ANG MO KIO     3 ROOM   601   ANG MO KIO AVE 5     01 TO 03   \n",
+       "...         ...         ...        ...   ...                ...          ...   \n",
+       "176368  2024-04      YISHUN     5 ROOM  432A       YISHUN AVE 1     07 TO 09   \n",
+       "176369  2024-04      YISHUN     5 ROOM   298       YISHUN ST 20     01 TO 03   \n",
+       "176370  2024-04      YISHUN     5 ROOM  335C       YISHUN ST 31     13 TO 15   \n",
+       "176371  2024-04      YISHUN     5 ROOM  502D       YISHUN ST 51     07 TO 09   \n",
+       "176372  2024-04      YISHUN  EXECUTIVE   652       YISHUN AVE 4     07 TO 09   \n",
+       "\n",
+       "        floor_area_sqm      flat_model  lease_commence_date  \\\n",
+       "0                 44.0        Improved                 1979   \n",
+       "1                 67.0  New Generation                 1978   \n",
+       "2                 67.0  New Generation                 1980   \n",
+       "3                 68.0  New Generation                 1980   \n",
+       "4                 67.0  New Generation                 1980   \n",
+       "...                ...             ...                  ...   \n",
+       "176368           112.0        Improved                 2015   \n",
+       "176369           112.0        Improved                 2000   \n",
+       "176370           112.0        Improved                 2015   \n",
+       "176371           112.0        Improved                 2018   \n",
+       "176372           181.0       Apartment                 1992   \n",
+       "\n",
+       "           remaining_lease  resale_price  \n",
+       "0       61 years 04 months      232000.0  \n",
+       "1       60 years 07 months      250000.0  \n",
+       "2       62 years 05 months      262000.0  \n",
+       "3        62 years 01 month      265000.0  \n",
+       "4       62 years 05 months      265000.0  \n",
+       "...                    ...           ...  \n",
+       "176368  90 years 07 months      660000.0  \n",
+       "176369  75 years 08 months      585000.0  \n",
+       "176370  90 years 08 months      673800.0  \n",
+       "176371  92 years 10 months      725000.0  \n",
+       "176372  67 years 03 months     1080000.0  \n",
+       "\n",
+       "[176373 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#need to combine all the data (drop street name)\n",
+    "df1999 = prices1999\n",
+    "df2012 = prices2012\n",
+    "df2014 = prices2014\n",
+    "df2017 = prices2017\n",
+    "\n",
+    "#drop remaining lease column (because only >2017 has this column will recalc later)\n",
+    "df2017.drop('remaining_lease', axis=1, inplace=True)\n",
+    "df2017\n",
+    "\n",
+    "# df = pd.concat([df1999,df2012,df2014,df2017],ignore_index=True)\n",
+    "# df"
    ]
   }
  ],
