--- a/load-data.ipynb
+++ b/load-data.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "#imports \n",
     "import pandas as pd \n",
-    "import matplotlib as plt "
+    "import matplotlib as plt \n",
+    "import numpy as np\n",
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,226 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>month</th>\n",
-       "      <th>town</th>\n",
-       "      <th>flat_type</th>\n",
-       "      <th>block</th>\n",
-       "      <th>street_name</th>\n",
-       "      <th>storey_range</th>\n",
-       "      <th>floor_area_sqm</th>\n",
-       "      <th>flat_model</th>\n",
-       "      <th>lease_commence_date</th>\n",
-       "      <th>resale_price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1990-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>1 ROOM</td>\n",
-       "      <td>309</td>\n",
-       "      <td>ANG MO KIO AVE 1</td>\n",
-       "      <td>10 TO 12</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>IMPROVED</td>\n",
-       "      <td>1977</td>\n",
-       "      <td>9000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1990-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>1 ROOM</td>\n",
-       "      <td>309</td>\n",
-       "      <td>ANG MO KIO AVE 1</td>\n",
-       "      <td>04 TO 06</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>IMPROVED</td>\n",
-       "      <td>1977</td>\n",
-       "      <td>6000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1990-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>1 ROOM</td>\n",
-       "      <td>309</td>\n",
-       "      <td>ANG MO KIO AVE 1</td>\n",
-       "      <td>10 TO 12</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>IMPROVED</td>\n",
-       "      <td>1977</td>\n",
-       "      <td>8000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1990-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>1 ROOM</td>\n",
-       "      <td>309</td>\n",
-       "      <td>ANG MO KIO AVE 1</td>\n",
-       "      <td>07 TO 09</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>IMPROVED</td>\n",
-       "      <td>1977</td>\n",
-       "      <td>6000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1990-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>3 ROOM</td>\n",
-       "      <td>216</td>\n",
-       "      <td>ANG MO KIO AVE 1</td>\n",
-       "      <td>04 TO 06</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>NEW GENERATION</td>\n",
-       "      <td>1976</td>\n",
-       "      <td>47200.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>885418</th>\n",
-       "      <td>2024-04</td>\n",
-       "      <td>YISHUN</td>\n",
-       "      <td>5 ROOM</td>\n",
-       "      <td>432A</td>\n",
-       "      <td>YISHUN AVE 1</td>\n",
-       "      <td>07 TO 09</td>\n",
-       "      <td>112.0</td>\n",
-       "      <td>Improved</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>660000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>885419</th>\n",
-       "      <td>2024-04</td>\n",
-       "      <td>YISHUN</td>\n",
-       "      <td>5 ROOM</td>\n",
-       "      <td>298</td>\n",
-       "      <td>YISHUN ST 20</td>\n",
-       "      <td>01 TO 03</td>\n",
-       "      <td>112.0</td>\n",
-       "      <td>Improved</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>585000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>885420</th>\n",
-       "      <td>2024-04</td>\n",
-       "      <td>YISHUN</td>\n",
-       "      <td>5 ROOM</td>\n",
-       "      <td>335C</td>\n",
-       "      <td>YISHUN ST 31</td>\n",
-       "      <td>13 TO 15</td>\n",
-       "      <td>112.0</td>\n",
-       "      <td>Improved</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>673800.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>885421</th>\n",
-       "      <td>2024-04</td>\n",
-       "      <td>YISHUN</td>\n",
-       "      <td>5 ROOM</td>\n",
-       "      <td>502D</td>\n",
-       "      <td>YISHUN ST 51</td>\n",
-       "      <td>07 TO 09</td>\n",
-       "      <td>112.0</td>\n",
-       "      <td>Improved</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>725000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>885422</th>\n",
-       "      <td>2024-04</td>\n",
-       "      <td>YISHUN</td>\n",
-       "      <td>EXECUTIVE</td>\n",
-       "      <td>652</td>\n",
-       "      <td>YISHUN AVE 4</td>\n",
-       "      <td>07 TO 09</td>\n",
-       "      <td>181.0</td>\n",
-       "      <td>Apartment</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>1080000.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>885423 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          month        town  flat_type block       street_name storey_range  \\\n",
-       "0       1990-01  ANG MO KIO     1 ROOM   309  ANG MO KIO AVE 1     10 TO 12   \n",
-       "1       1990-01  ANG MO KIO     1 ROOM   309  ANG MO KIO AVE 1     04 TO 06   \n",
-       "2       1990-01  ANG MO KIO     1 ROOM   309  ANG MO KIO AVE 1     10 TO 12   \n",
-       "3       1990-01  ANG MO KIO     1 ROOM   309  ANG MO KIO AVE 1     07 TO 09   \n",
-       "4       1990-01  ANG MO KIO     3 ROOM   216  ANG MO KIO AVE 1     04 TO 06   \n",
-       "...         ...         ...        ...   ...               ...          ...   \n",
-       "885418  2024-04      YISHUN     5 ROOM  432A      YISHUN AVE 1     07 TO 09   \n",
-       "885419  2024-04      YISHUN     5 ROOM   298      YISHUN ST 20     01 TO 03   \n",
-       "885420  2024-04      YISHUN     5 ROOM  335C      YISHUN ST 31     13 TO 15   \n",
-       "885421  2024-04      YISHUN     5 ROOM  502D      YISHUN ST 51     07 TO 09   \n",
-       "885422  2024-04      YISHUN  EXECUTIVE   652      YISHUN AVE 4     07 TO 09   \n",
-       "\n",
-       "        floor_area_sqm      flat_model  lease_commence_date  resale_price  \n",
-       "0                 31.0        IMPROVED                 1977        9000.0  \n",
-       "1                 31.0        IMPROVED                 1977        6000.0  \n",
-       "2                 31.0        IMPROVED                 1977        8000.0  \n",
-       "3                 31.0        IMPROVED                 1977        6000.0  \n",
-       "4                 73.0  NEW GENERATION                 1976       47200.0  \n",
-       "...                ...             ...                  ...           ...  \n",
-       "885418           112.0        Improved                 2015      660000.0  \n",
-       "885419           112.0        Improved                 2000      585000.0  \n",
-       "885420           112.0        Improved                 2015      673800.0  \n",
-       "885421           112.0        Improved                 2018      725000.0  \n",
-       "885422           181.0       Apartment                 1992     1080000.0  \n",
-       "\n",
-       "[885423 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#need to combine all the data (drop street name)\n",
     "df1999 = prices1999\n",
@@ -255,220 +40,31 @@
     "\n",
     "#drop remaining lease column (because only >2017 has this column will recalc later)\n",
     "df2017.drop('remaining_lease', axis='columns', inplace=True)\n",
-    "df = pd.concat([df1999,df2012,df2014,df2017],ignore_index=True)\n",
-    "df"
+    "df = pd.concat([df1999,df2012,df2014,df2017],ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>month</th>\n",
-       "      <th>town</th>\n",
-       "      <th>flat_type</th>\n",
-       "      <th>storey_range</th>\n",
-       "      <th>floor_area_sqm</th>\n",
-       "      <th>flat_model</th>\n",
-       "      <th>lease_commence_date</th>\n",
-       "      <th>resale_price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1990-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>1 ROOM</td>\n",
-       "      <td>10 TO 12</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>IMPROVED</td>\n",
-       "      <td>1977</td>\n",
-       "      <td>9000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1990-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>1 ROOM</td>\n",
-       "      <td>04 TO 06</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>IMPROVED</td>\n",
-       "      <td>1977</td>\n",
-       "      <td>6000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1990-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>1 ROOM</td>\n",
-       "      <td>10 TO 12</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>IMPROVED</td>\n",
-       "      <td>1977</td>\n",
-       "      <td>8000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1990-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>1 ROOM</td>\n",
-       "      <td>07 TO 09</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>IMPROVED</td>\n",
-       "      <td>1977</td>\n",
-       "      <td>6000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1990-01</td>\n",
-       "      <td>ANG MO KIO</td>\n",
-       "      <td>3 ROOM</td>\n",
-       "      <td>04 TO 06</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>NEW GENERATION</td>\n",
-       "      <td>1976</td>\n",
-       "      <td>47200.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>885418</th>\n",
-       "      <td>2024-04</td>\n",
-       "      <td>YISHUN</td>\n",
-       "      <td>5 ROOM</td>\n",
-       "      <td>07 TO 09</td>\n",
-       "      <td>112.0</td>\n",
-       "      <td>Improved</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>660000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>885419</th>\n",
-       "      <td>2024-04</td>\n",
-       "      <td>YISHUN</td>\n",
-       "      <td>5 ROOM</td>\n",
-       "      <td>01 TO 03</td>\n",
-       "      <td>112.0</td>\n",
-       "      <td>Improved</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>585000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>885420</th>\n",
-       "      <td>2024-04</td>\n",
-       "      <td>YISHUN</td>\n",
-       "      <td>5 ROOM</td>\n",
-       "      <td>13 TO 15</td>\n",
-       "      <td>112.0</td>\n",
-       "      <td>Improved</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>673800.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>885421</th>\n",
-       "      <td>2024-04</td>\n",
-       "      <td>YISHUN</td>\n",
-       "      <td>5 ROOM</td>\n",
-       "      <td>07 TO 09</td>\n",
-       "      <td>112.0</td>\n",
-       "      <td>Improved</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>725000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>885422</th>\n",
-       "      <td>2024-04</td>\n",
-       "      <td>YISHUN</td>\n",
-       "      <td>EXECUTIVE</td>\n",
-       "      <td>07 TO 09</td>\n",
-       "      <td>181.0</td>\n",
-       "      <td>Apartment</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>1080000.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>885423 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          month        town  flat_type storey_range  floor_area_sqm  \\\n",
-       "0       1990-01  ANG MO KIO     1 ROOM     10 TO 12            31.0   \n",
-       "1       1990-01  ANG MO KIO     1 ROOM     04 TO 06            31.0   \n",
-       "2       1990-01  ANG MO KIO     1 ROOM     10 TO 12            31.0   \n",
-       "3       1990-01  ANG MO KIO     1 ROOM     07 TO 09            31.0   \n",
-       "4       1990-01  ANG MO KIO     3 ROOM     04 TO 06            73.0   \n",
-       "...         ...         ...        ...          ...             ...   \n",
-       "885418  2024-04      YISHUN     5 ROOM     07 TO 09           112.0   \n",
-       "885419  2024-04      YISHUN     5 ROOM     01 TO 03           112.0   \n",
-       "885420  2024-04      YISHUN     5 ROOM     13 TO 15           112.0   \n",
-       "885421  2024-04      YISHUN     5 ROOM     07 TO 09           112.0   \n",
-       "885422  2024-04      YISHUN  EXECUTIVE     07 TO 09           181.0   \n",
-       "\n",
-       "            flat_model  lease_commence_date  resale_price  \n",
-       "0             IMPROVED                 1977        9000.0  \n",
-       "1             IMPROVED                 1977        6000.0  \n",
-       "2             IMPROVED                 1977        8000.0  \n",
-       "3             IMPROVED                 1977        6000.0  \n",
-       "4       NEW GENERATION                 1976       47200.0  \n",
-       "...                ...                  ...           ...  \n",
-       "885418        Improved                 2015      660000.0  \n",
-       "885419        Improved                 2000      585000.0  \n",
-       "885420        Improved                 2015      673800.0  \n",
-       "885421        Improved                 2018      725000.0  \n",
-       "885422       Apartment                 1992     1080000.0  \n",
-       "\n",
-       "[885423 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.drop('block', axis='columns', inplace=True)\n",
-    "df.drop('street_name', axis='columns', inplace=True)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#i dont want to use block number to train model\n",
+    "#i also dont want to use street name will generalise just under town\n",
+    "df.drop('block', axis='columns', inplace=True)\n",
+    "df.drop('street_name', axis='columns', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_year = datetime.now().year\n",
+    "df['remaining_lease (years)'] = 99 - (current_year - df.lease_commence_date) \n",
+    "df.drop('lease_commence_date',axis='columns',inplace=True)"
+   ]
   }
  ],
  "metadata": {
